--- a/app/src/main/res/layout/fragment_feedback.xml
+++ b/app/src/main/res/layout/fragment_feedback.xml
@@ -2,34 +2,55 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:background="@color/teal_700"
     android:layout_height="match_parent">
+    <androidx.appcompat.widget.AppCompatTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="@string/opinion"
+        android:gravity="center"
+        android:background="@drawable/text_view_back"
+        android:fontFamily="@font/lato"
+        android:textSize="@dimen/size_20"
+        android:textColor="@color/white"
+        android:layout_marginTop="@dimen/space_20"/>
 
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/edt_feedback"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/space_30"
-        android:background="@color/gray"
-        android:hint="Feedback..."
+        android:inputType="text"
+        android:background="@drawable/edit_text_back"
+        android:hint="@string/feedback_"
         android:textColor="@color/white"
         android:textColorHint="#DAD8D8"
         android:paddingHorizontal="@dimen/space_10"
         android:paddingVertical="@dimen/space_30"
-        app:layout_constraintBottom_toTopOf="@+id/appCompatButton"
+        app:layout_constraintBottom_toTopOf="@+id/btn_send_message"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/appCompatButton"
+        android:id="@+id/btn_send_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:drawableStart="@drawable/ic_baseline_email_24"
-        android:text="send"
+        android:text="@string/send"
+        android:paddingHorizontal="@dimen/space_30"
+        android:textAllCaps="false"
+        android:fontFamily="@font/lato"
+        android:paddingVertical="@dimen/space_30"
+        android:textStyle="bold"
+        android:textSize="@dimen/size_30"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        android:textColor="@color/white"
+        android:background="@drawable/btn_message_back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edt_feedback" />
 
