--- a/app/src/main/res/layout/fragment_rate_us.xml
+++ b/app/src/main/res/layout/fragment_rate_us.xml
@@ -1,6 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <RatingBar
+        android:id="@+id/rating"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="@dimen/space_30"
+        android:rating="4.5"/>
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_rate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/btn_message_back"
+        app:layout_constraintTop_toBottomOf="@+id/rating"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="Rate"
+        android:fontFamily="@font/lato"
+        android:paddingHorizontal="@dimen/space_65"
+        android:paddingVertical="@dimen/space_20"
+        android:textSize="@dimen/size_20"
+        android:textColor="@color/white"
+        android:layout_marginTop="@dimen/space_50"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
