--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -8,6 +8,7 @@
     android:orientation="vertical">
 
     <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/linearLayoutCompat2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/space_20"
@@ -97,4 +98,53 @@
     </androidx.appcompat.widget.LinearLayoutCompat>
 
 
+<!---->
+<!---->
+
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/space_20"
+        android:background="@drawable/layout_background"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tv_share"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/space_30"
+            android:drawableStart="@drawable/ic_baseline_share_24"
+            android:drawableEnd="@drawable/ic_arrow_right"
+            android:fontFamily="@font/lato"
+            android:gravity="center"
+            android:paddingVertical="@dimen/space_15"
+            android:text="@string/share_with_friends"
+            android:textSize="@dimen/size_20" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginHorizontal="@dimen/space_60"
+            android:background="@color/gray" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tv_communicate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/space_30"
+            android:drawableStart="@drawable/ic_baseline_satellite_alt_24"
+            android:drawableEnd="@drawable/ic_arrow_right"
+            android:fontFamily="@font/lato"
+            android:gravity="center"
+            android:paddingVertical="@dimen/space_15"
+
+            android:text="@string/communicate_wit_us"
+            android:textSize="@dimen/size_20" />
+
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
 </androidx.constraintlayout.widget.ConstraintLayout>
