--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,4 +17,7 @@
     <dimen name="space_180">180dp</dimen>
     <dimen name="space_185">185dp</dimen>
     <dimen name="space_15">15dp</dimen>
+    <dimen name="space_75">75dp</dimen>
+    <dimen name="space_150">150dp</dimen>
+    <dimen name="space_130">130dp</dimen>
 </resources>
