--- a/app/src/main/res/drawable-v24/constraint_background.xml
+++ b/app/src/main/res/drawable-v24/constraint_background.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient android:startColor="@color/white"
-        android:endColor="@color/gray"
+        android:endColor="@color/gray_btn"
         android:angle="90"/>
 </shape>
