--- a/app/src/main/res/layout/fragment_analytics.xml
+++ b/app/src/main/res/layout/fragment_analytics.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/cons_back"
-    >
+    android:background="@drawable/cons_back">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -67,7 +66,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/lato"
-                android:text="Calories"
+                android:text="@string/calories"
 
                 android:textColor="@color/black"
                 android:textSize="@dimen/size_20" />
@@ -95,8 +94,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/lato"
-                android:text="Calories"
-
+                android:text="@string/time"
                 android:textColor="@color/black"
                 android:textSize="@dimen/size_20" />
 
@@ -105,7 +103,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:fontFamily="@font/lato"
-                android:text="0.0"
+                android:text="0:0"
                 android:textColor="@color/black"
                 android:textSize="@dimen/size_20" />
 
