--- a/app/src/main/res/layout/fragment_mine_profile.xml
+++ b/app/src/main/res/layout/fragment_mine_profile.xml
@@ -1,95 +1,183 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#D8D8D8">
+    android:background="@drawable/back_fragments">
 
 
-
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:layout_width="match_parent"
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tv_name"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/space_20"
-        android:layout_marginTop="@dimen/space_30"
-        android:background="@drawable/layout_background"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginHorizontal="@dimen/space_30"
+        android:fontFamily="@font/lato"
+        android:gravity="center"
+        android:paddingEnd="@dimen/space_50"
+        android:textColor="@color/black"
+        app:fontFamily="@font/lato"
+        android:paddingVertical="@dimen/space_15"
+        android:text="@string/name"
+        android:textSize="@dimen/size_20"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent" />
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tv_age"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/space_30"
+        android:fontFamily="@font/lato"
+        android:gravity="center"
+        android:textColor="@color/black"
+        app:fontFamily="@font/lato"
+        android:paddingVertical="@dimen/space_15"
+        android:text="@string/age"
+        android:textSize="@dimen/size_20"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_name" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tv_edit_name"
+        android:textColor="@color/black"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        android:fontFamily="@font/lato"
+        android:text="@string/_0"
+        app:fontFamily="@font/lato"
+        android:paddingVertical="@dimen/space_15"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="@dimen/space_60"
+        android:textSize="@dimen/size_20" />
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tv_edit_age"
+        android:text="@string/_0"
+        android:textColor="@color/black"
+        app:fontFamily="@font/lato"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@+id/tv_age"
+        android:fontFamily="@font/lato"
+        android:paddingVertical="@dimen/space_15"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="@dimen/space_60"
+        android:textSize="@dimen/size_20" />
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tv_edit_weight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@+id/tv_weight"
+        android:fontFamily="@font/lato"
+        android:text="@string/_0"
+        android:textColor="@color/black"
+        app:fontFamily="@font/lato"
+        android:paddingVertical="@dimen/space_15"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="@dimen/space_60"
+        android:textSize="@dimen/size_20" />
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tv_edit_target_weight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@+id/tv_target_weight"
+        android:fontFamily="@font/lato"
+        android:text="@string/_0"
+        android:textColor="@color/black"
+        app:fontFamily="@font/lato"
+        android:paddingVertical="@dimen/space_15"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="@dimen/space_60"
+        android:textSize="@dimen/size_20" />
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tv_edit_height"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@id/tv_height"
+        android:fontFamily="@font/lato"
+        android:text="@string/_0"
+        android:textColor="@color/black"
+        app:fontFamily="@font/lato"
+        android:paddingVertical="@dimen/space_15"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="@dimen/space_60"
+        android:textSize="@dimen/size_20"/>
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tv_edit_gender"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@id/tv_gender"
+        android:fontFamily="@font/lato"
+        android:text="@string/_0"
+        android:textColor="@color/black"
+        app:fontFamily="@font/lato"
+        android:paddingVertical="@dimen/space_15"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="@dimen/space_60"
+        android:textSize="@dimen/size_20"/>
 
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tv_my_profile"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/space_30"
-
-            android:fontFamily="@font/lato"
-            android:gravity="center"
-
-            android:paddingVertical="@dimen/space_15"
-            android:text="@string/height"
-            android:textSize="@dimen/size_20" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginHorizontal="@dimen/space_60"
-            android:background="#D8D8D8" />
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tv_remainder"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/space_30"
-            android:fontFamily="@font/lato"
-            android:gravity="center"
-            android:paddingVertical="@dimen/space_15"
-
-            android:text="@string/weight"
-            android:textSize="@dimen/size_20" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginHorizontal="@dimen/space_60"
-            android:background="#D8D8D8" />
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tv_rate"
-            android:layout_width="match_parent"
-
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/space_30"
-            android:fontFamily="@font/lato"
-            android:gravity="center"
-            android:paddingVertical="@dimen/space_15"
-            android:text="Target weight"
-
-            android:textSize="@dimen/size_20" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginHorizontal="@dimen/space_60"
-            android:background="#D8D8D8" />
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tv_feedback"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/space_30"
-            android:fontFamily="@font/lato"
-            android:gravity="center"
-            android:paddingVertical="@dimen/space_15"
-            android:text="Gender"
-            android:textCursorDrawable="@color/blue_black"
-            android:textSize="@dimen/size_20" />
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tv_weight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/space_30"
+        android:fontFamily="@font/lato"
+        android:gravity="center"
+        android:paddingVertical="@dimen/space_15"
+        android:text="@string/weight"
+        android:textSize="@dimen/size_20"
+        android:textColor="@color/black"
+        app:fontFamily="@font/lato"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_age" />
 
 
-    </androidx.appcompat.widget.LinearLayoutCompat>
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tv_target_weight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/space_30"
+        android:fontFamily="@font/lato"
+        android:gravity="center"
+        android:paddingVertical="@dimen/space_15"
+        android:text="@string/target_weight"
+        android:textSize="@dimen/size_20"
+        android:textColor="@color/black"
+        app:fontFamily="@font/lato"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_weight" />
 
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tv_height"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/space_30"
+        android:fontFamily="@font/lato"
+        android:gravity="center"
+        android:paddingVertical="@dimen/space_15"
+        android:text="@string/height"
+        android:textSize="@dimen/size_20"
+        android:textColor="@color/black"
+        app:fontFamily="@font/lato"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_target_weight" />
+
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tv_gender"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/space_30"
+        android:fontFamily="@font/lato"
+        android:gravity="center"
+        android:paddingVertical="@dimen/space_15"
+        android:text="@string/gender"
+        android:textCursorDrawable="@color/blue_black"
+        android:textSize="@dimen/size_20"
+        android:textColor="@color/black"
+        app:fontFamily="@font/lato"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_height" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
