--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -144,6 +144,25 @@
 
             android:text="@string/communicate_wit_us"
             android:textSize="@dimen/size_20" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginHorizontal="@dimen/space_60"
+            android:background="@color/gray" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tv_exit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/space_30"
+            android:drawableStart="@drawable/ic_exit"
+            android:drawableEnd="@drawable/ic_arrow_right"
+            android:fontFamily="@font/lato"
+            android:gravity="center"
+            android:paddingVertical="@dimen/space_15"
+
+            android:text="Exit"
+            android:textSize="@dimen/size_20" />
 
 
     </androidx.appcompat.widget.LinearLayoutCompat>
