--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -3,29 +3,29 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
     <item
-        android:id="@+id/trainings"
+        android:id="@+id/trainingsFragment2"
         android:icon="@drawable/ic_trainings"
         android:orderInCategory="1"
         android:title="@string/trainings_"/>
     <item
-        android:id="@+id/custom"
+        android:id="@+id/customTrainingsFragment2"
         android:icon="@drawable/ic_custom"
         android:orderInCategory="2"
         android:title="@string/custom_create"
         />
     <item
-        android:id="@+id/home"
+        android:id="@+id/homeFragment2"
         android:icon="@drawable/ic_home"
         android:orderInCategory="3"
         android:checked="true"
         android:title="@string/home_" />
     <item
-        android:id="@+id/analytics"
+        android:id="@+id/analyticsFragment2"
         android:icon="@drawable/ic_analytics"
         android:orderInCategory="4"
         android:title="@string/analytics_" />
     <item
-        android:id="@+id/profile"
+        android:id="@+id/myProfileFragment"
         android:icon="@drawable/ic_profile"
         android:orderInCategory="5"
         android:title="@string/my_profile" />
