--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginBottom="@dimen/space_65"
-    android:background="@drawable/constraint_background"
+    android:background="@drawable/back_fragments"
     android:orientation="vertical">
 
     <androidx.appcompat.widget.LinearLayoutCompat
