--- a/app/src/main/res/drawable-v24/button_background.xml
+++ b/app/src/main/res/drawable-v24/button_background.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#192126"/>
+    <solid android:color="#168A7C"/>
     <corners android:radius="@dimen/space_20"/>
 
 </shape>
