--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,11 +25,12 @@
             android:layout_height="0dp"
             android:background="@drawable/navigation_background"
             app:itemHorizontalTranslationEnabled="true"
-            app:itemIconTint="@color/white"
+            app:itemIconTint="@color/bottom_nav_selector"
             app:itemRippleColor="@color/teal_200"
             app:itemTextColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:labelVisibilityMode="labeled"
             app:menu="@menu/menu_bottom" />
 </androidx.constraintlayout.widget.ConstraintLayout>
