--- a/app/src/main/res/layout/fragment_abs.xml
+++ b/app/src/main/res/layout/fragment_abs.xml
@@ -2,5 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="ABS"
+        android:gravity="center"
+        android:textSize="@dimen/size_50"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
