--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,27 +1,133 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:background="@drawable/back_fragments">
 
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tab_layout_home"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="@drawable/toolbar_background"
-        app:tabTextColor="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        android:layout_height="match_parent">
 
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/view_pager_home"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/tab_layout_home"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="@dimen/space_65"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvInfo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/space_20"
+            android:fontFamily="@font/lato"
+            android:gravity="center"
+            android:text="@string/info"
+            android:textColor="@color/white"
+            android:textSize="@dimen/size_26"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/lottieGif"
+            android:layout_width="@dimen/space_300"
+            android:layout_height="@dimen/space_300"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvInfo"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"
+            app:lottie_rawRes="@raw/fitness_app" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvInfo1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/space_20"
+            android:fontFamily="@font/lato"
+            android:gravity="center"
+            android:text="@string/info1"
+            android:textColor="@color/white"
+            android:textSize="@dimen/size_26"
+            app:layout_constraintTop_toBottomOf="@+id/lottieGif" />
+
+        <HorizontalScrollView
+            android:id="@+id/scrollHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@+id/tvInfo1">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:weightSum="10">
+
+                <com.airbnb.lottie.LottieAnimationView
+                    android:id="@+id/lottieHealthyFood"
+                    android:layout_width="@dimen/space_150"
+                    android:layout_height="@dimen/space_150"
+                    android:layout_weight="1"
+                    android:background="@drawable/rev_back"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:lottie_autoPlay="true"
+                    app:lottie_loop="true"
+                    app:lottie_rawRes="@raw/walking_avocado" />
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/healthy_food"
+                    android:textSize="@dimen/size_20"
+                    android:textColor="@color/white"
+                    app:layout_constraintEnd_toEndOf="@+id/lottieHealthyFood"
+                    app:layout_constraintStart_toStartOf="@id/lottieHealthyFood"
+                    app:layout_constraintTop_toBottomOf="@+id/lottieHealthyFood" />
+
+                <com.airbnb.lottie.LottieAnimationView
+                    android:id="@+id/lottieSleep"
+                    android:layout_width="@dimen/space_150"
+                    android:layout_height="@dimen/space_150"
+                    android:layout_weight="1"
+                    android:background="@drawable/rev_back"
+                    app:layout_constraintStart_toEndOf="@+id/lottieHealthyFood"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:lottie_autoPlay="true"
+                    app:lottie_loop="true"
+                    app:lottie_rawRes="@raw/sleep" />
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="@dimen/size_20"
+                    android:textColor="@color/white"
+                    app:layout_constraintStart_toStartOf="@+id/lottieSleep"
+                    app:layout_constraintEnd_toEndOf="@+id/lottieSleep"
+                    app:layout_constraintTop_toBottomOf="@+id/lottieSleep"
+                    android:text="@string/sleep"/>
+
+                <com.airbnb.lottie.LottieAnimationView
+                    android:id="@+id/lottieWater"
+                    android:layout_width="@dimen/space_150"
+                    android:layout_height="@dimen/space_150"
+                    android:layout_weight="1"
+                    android:background="@drawable/rev_back"
+                    app:layout_constraintStart_toEndOf="@+id/lottieSleep"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:lottie_autoPlay="true"
+                    app:lottie_loop="true"
+                    app:lottie_rawRes="@raw/water" />
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/lottieWater"
+                    app:layout_constraintStart_toStartOf="@+id/lottieWater"
+                    app:layout_constraintEnd_toEndOf="@+id/lottieWater"
+                    android:text="@string/water"
+                    android:textSize="@dimen/size_20"
+                    android:textColor="@color/white"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </HorizontalScrollView>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+</androidx.core.widget.NestedScrollView>
