--- a/app/src/main/res/layout/fragment_select_gender.xml
+++ b/app/src/main/res/layout/fragment_select_gender.xml
@@ -1,60 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:weightSum="2"
-    android:background="@color/dark_blue">
+    android:background="@drawable/back_fragments"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tv_select"
-        android:layout_width="match_parent"
+    <androidx.appcompat.widget.AppCompatTextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:text="@string/select_gender"
-        android:paddingVertical="@dimen/space_60"
-        android:paddingHorizontal="@dimen/space_30"
-        android:textColor="@color/dark_blue"
-        android:gravity="center"
-        android:textSize="@dimen/size_50"
-        android:typeface="serif"
-        android:textStyle="italic"
-        android:background="@drawable/text_background"
-        app:layout_constraintBottom_toBottomOf="@+id/linearLayoutCompat"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/linearLayoutCompat"
-        app:layout_constraintTop_toTopOf="@+id/linearLayoutCompat" />
+        android:textColor="@color/white"
+        android:fontFamily="@font/lato"
+        android:textSize="@dimen/size_26"
+        android:textStyle="bold" />
 
 
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/img_man"
+        android:layout_width="@dimen/space_200"
+        android:layout_height="@dimen/space_200"
+        android:layout_gravity="center"
+        android:layout_weight="1"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/man" />
 
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:id="@+id/linearLayoutCompat"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/appCompatTextView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="@string/man"
+        android:textColor="@color/white"
+        android:textSize="@dimen/size_26"
+        android:textStyle="bold" />
 
-        <androidx.appcompat.widget.AppCompatImageButton
-            android:id="@+id/img_woman"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="80dp"
-            android:layout_weight="1"
-            android:src="@drawable/woman" />
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/img_woman"
+        android:layout_width="@dimen/space_200"
+        android:layout_height="@dimen/space_200"
+        android:layout_gravity="center"
+        android:layout_weight="1"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/woman" />
 
-        <androidx.appcompat.widget.AppCompatImageButton
-            android:id="@+id/img_man"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="80dp"
-            android:layout_weight="1"
-            android:src="@drawable/man" />
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/appCompatTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="@dimen/space_100"
+        android:text="@string/woman"
+        android:textColor="@color/white"
+        android:textSize="@dimen/size_26"
+        android:textStyle="bold" />
 
-    </androidx.appcompat.widget.LinearLayoutCompat>
 
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.appcompat.widget.LinearLayoutCompat>
