--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -20,4 +20,8 @@
     <dimen name="space_75">75dp</dimen>
     <dimen name="space_150">150dp</dimen>
     <dimen name="space_130">130dp</dimen>
+    <dimen name="size_25">25sp</dimen>
+    <dimen name="space_200">200dp</dimen>
+    <dimen name="space_300">300dp</dimen>
+    <dimen name="size_18">18sp</dimen>
 </resources>
