--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -38,15 +38,18 @@
             android:id="@+id/tvInfo1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/space_20"
             android:fontFamily="@font/lato"
             android:gravity="center"
+
             android:text="@string/info1"
             android:textColor="@color/white"
             android:textSize="@dimen/size_26"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/lottieGif" />
 
         <HorizontalScrollView
+            android:layout_marginTop="@dimen/space_20"
             android:id="@+id/scrollHorizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -76,9 +79,11 @@
                     android:text="@string/healthy_food"
                     android:textSize="@dimen/size_20"
                     android:textColor="@color/white"
+                    android:paddingVertical="@dimen/space_15"
                     app:layout_constraintEnd_toEndOf="@+id/lottieHealthyFood"
                     app:layout_constraintStart_toStartOf="@id/lottieHealthyFood"
-                    app:layout_constraintTop_toBottomOf="@+id/lottieHealthyFood" />
+                    app:layout_constraintTop_toBottomOf="@+id/lottieHealthyFood"
+                    />
 
                 <com.airbnb.lottie.LottieAnimationView
                     android:id="@+id/lottieSleep"
@@ -96,6 +101,8 @@
                     android:layout_height="wrap_content"
                     android:textSize="@dimen/size_20"
                     android:textColor="@color/white"
+                    android:paddingVertical="@dimen/space_15"
+
                     app:layout_constraintStart_toStartOf="@+id/lottieSleep"
                     app:layout_constraintEnd_toEndOf="@+id/lottieSleep"
                     app:layout_constraintTop_toBottomOf="@+id/lottieSleep"
@@ -119,6 +126,7 @@
                     app:layout_constraintStart_toStartOf="@+id/lottieWater"
                     app:layout_constraintEnd_toEndOf="@+id/lottieWater"
                     android:text="@string/water"
+                    android:paddingVertical="@dimen/space_15"
                     android:textSize="@dimen/size_20"
                     android:textColor="@color/white"/>
 
