--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -36,7 +36,7 @@
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:layout_marginHorizontal="@dimen/space_60"
-            android:background="@color/gray" />
+            android:background="@color/dark_t" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_remainder"
@@ -56,7 +56,7 @@
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:layout_marginHorizontal="@dimen/space_60"
-            android:background="@color/gray" />
+            android:background="@color/dark_t" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_rate"
@@ -77,7 +77,7 @@
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:layout_marginHorizontal="@dimen/space_60"
-            android:background="@color/gray" />
+            android:background="@color/dark_t" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_feedback"
@@ -92,25 +92,11 @@
             android:text="@string/feedback"
             android:textCursorDrawable="@color/blue_black"
             android:textSize="@dimen/size_20" />
-
-
-    </androidx.appcompat.widget.LinearLayoutCompat>
-
-
-<!---->
-<!---->
-
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/space_20"
-        android:background="@drawable/layout_background"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginHorizontal="@dimen/space_60"
+            android:background="@color/dark_t" />
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_share"
             android:layout_width="match_parent"
@@ -128,7 +114,7 @@
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:layout_marginHorizontal="@dimen/space_60"
-            android:background="@color/gray" />
+            android:background="@color/dark_t" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_communicate"
@@ -147,7 +133,7 @@
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:layout_marginHorizontal="@dimen/space_60"
-            android:background="@color/gray" />
+            android:background="@color/dark_t" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_exit"
@@ -165,4 +151,10 @@
 
 
     </androidx.appcompat.widget.LinearLayoutCompat>
+
+
+<!---->
+<!---->
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
