--- a/app/src/main/res/layout/fragment_rate_us.xml
+++ b/app/src/main/res/layout/fragment_rate_us.xml
@@ -31,4 +31,17 @@
         android:textColor="@color/white"
         android:layout_marginTop="@dimen/space_50"/>
 
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/img_man"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_gravity="center"
+        android:layout_weight="1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_rate"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/feedback_rate" />
 </androidx.constraintlayout.widget.ConstraintLayout>
