--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -24,4 +24,5 @@
     <dimen name="space_200">200dp</dimen>
     <dimen name="space_300">300dp</dimen>
     <dimen name="size_18">18sp</dimen>
+    <dimen name="size_15">15sp</dimen>
 </resources>
